<resources>
    <string name="app_name">ManageProducts</string>
    <string name="txvUser">User</string>
    <string name="txvPassword">Password</string>
    <string name="txvEmail">email</string>
    <string name="cbxRemember">Remember me</string>
    <string name="messagePassword">Enter your password</string>
    <string name="messageUser">Enter your user name</string>
    <string name="btnLogin" translatable="false">Login</string>
    <string name="txvForgot">Forgot your password?</string>
    <string name="txvSign">Sign up</string>

    <string name="acSearchProduct">Search product</string>
    <string name="btnSelectImg">Select image</string>
    <string name="txvName">Name</string>
    <string name="txvDesc">Description</string>
    <string name="txvBrand">Brand</string>
    <string name="txvDosage">Dosage</string>
    <string name="txvStock">Stock</string>
    <string name="txvPrice">Price</string>
    <string name="btnAddMed">Add</string>
    <string name="edit_product">Edit</string>
    <string name="action_sort_alphabetically">Sort alphabetically</string>
    <string name="action_settings_account">Account settings</string>
    <string name="action_settings_general">General settings</string>
    <string name="delete_product">Delete product</string>

    <string name="rbCompany">Company</string>
    <string name="rbClient">Client</string>
    <string name="edtCompany">Company name</string>

    <string name="cbxNews">I want to receive news</string>
    <string name="cbxTerms">I have read the terms and conditions and I accept them</string>

    <!-- %1 primer argumento, %2 segundo ; $s string ; $d double... -->
    <string name="message_county_city">You have chosen %1$s (%2$s)</string>

    <string name="nodata">No data available</string>
    <string name="already_exists">This product already exists</string>

    <string name="home">Home</string>
    <string name="products">Products</string>
    <string name="chemists">Chemist\'s</string>
    <string name="sale">Sale</string>

    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <string name="drawer_open">Open navigation drawer</string>

    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errorUpdate">Error al actualizar</string>
    <string name="errorInsert">Error al insertar</string>
    <string name="category">Categories</string>
    <string name="dir">Address:</string>
    <string name="cif">C.I.F</string>
    <string name="errorDelete">Error al borrar el registro</string>
    <string name="invoice">Invoice:</string>
    <string name="dirphar">Pharmacy:</string>
    <string name="dateinv">Date:</string>
</resources>